libs/sdk-flutter/ios/Classes/frb_generated.h

typedef int64_t DartPort;
typedef bool (*DartPostCObjectFnType)(DartPort port_id, void *message);
void store_dart_post_cobject(DartPostCObjectFnType ptr);
typedef struct wire_cst_list_prim_u_8_strict {
  uint8_t *ptr;
  int32_t len;
} wire_cst_list_prim_u_8_strict;
typedef struct wire_cst_opening_fee_params {
  uint64_t min_msat;
  uint32_t proportional;
  struct wire_cst_list_prim_u_8_strict *valid_until;
  uint32_t max_idle_time;
  uint32_t max_client_to_self_delay;
  struct wire_cst_list_prim_u_8_strict *promise;
} wire_cst_opening_fee_params;
typedef struct wire_cst_buy_bitcoin_request {
  int32_t provider;
  struct wire_cst_opening_fee_params *opening_fee_params;
} wire_cst_buy_bitcoin_request;
typedef struct wire_cst_check_message_request {
  struct wire_cst_list_prim_u_8_strict *message;
  struct wire_cst_list_prim_u_8_strict *pubkey;
  struct wire_cst_list_prim_u_8_strict *signature;
} wire_cst_check_message_request;
typedef struct wire_cst_configure_node_request {
  struct wire_cst_list_prim_u_8_strict *close_to_address;
} wire_cst_configure_node_request;
typedef union NodeConfigKind {
  struct wire_cst_NodeConfig_Greenlight Greenlight;
} NodeConfigKind;
typedef struct wire_cst_node_config {
  int32_t tag;
  union NodeConfigKind kind;
} wire_cst_node_config;
typedef struct wire_cst_config {
  struct wire_cst_list_prim_u_8_strict *breezserver;
  struct wire_cst_list_prim_u_8_strict *chainnotifier_url;
  struct wire_cst_list_prim_u_8_strict *mempoolspace_url;
  struct wire_cst_list_prim_u_8_strict *working_dir;
  int32_t network;
  uint32_t payment_timeout_sec;
  struct wire_cst_list_prim_u_8_strict *default_lsp_id;
  struct wire_cst_list_prim_u_8_strict *api_key;
  double maxfee_percent;
  uint64_t exemptfee_msat;
  struct wire_cst_node_config node_config;
} wire_cst_config;
typedef struct wire_cst_connect_request {
  struct wire_cst_config config;
  struct wire_cst_list_prim_u_8_strict *seed;
  bool *restore_only;
} wire_cst_connect_request;
typedef struct wire_cst_reverse_swap_fees_request {
  uint64_t *send_amount_sat;
  uint32_t *claim_tx_feerate;
} wire_cst_reverse_swap_fees_request;
void frbgen_breez_sdk_wire_backup(int64_t port_);
void frbgen_breez_sdk_wire_backup_status(int64_t port_);
void frbgen_breez_sdk_wire_breez_events_stream(int64_t port_,
                                               struct wire_cst_list_prim_u_8_strict *s);
void frbgen_breez_sdk_wire_breez_log_stream(int64_t port_, struct wire_cst_list_prim_u_8_strict *s);
void frbgen_breez_sdk_wire_buy_bitcoin(int64_t port_, struct wire_cst_buy_bitcoin_request *req);
void frbgen_breez_sdk_wire_check_message(int64_t port_, struct wire_cst_check_message_request *req);
void frbgen_breez_sdk_wire_close_lsp_channels(int64_t port_);
void frbgen_breez_sdk_wire_configure_node(int64_t port_,
                                          struct wire_cst_configure_node_request *req);
void frbgen_breez_sdk_wire_connect(int64_t port_, struct wire_cst_connect_request *req);
void frbgen_breez_sdk_wire_connect_lsp(int64_t port_, struct wire_cst_list_prim_u_8_strict *lsp_id);
void frbgen_breez_sdk_wire_default_config(int64_t port_,
                                          int32_t env_type,
                                          struct wire_cst_list_prim_u_8_strict *api_key,
                                          struct wire_cst_node_config *node_config);
void frbgen_breez_sdk_wire_disconnect(int64_t port_);
void frbgen_breez_sdk_wire_execute_command(int64_t port_,
                                           struct wire_cst_list_prim_u_8_strict *command);
void frbgen_breez_sdk_wire_fetch_fiat_rates(int64_t port_);
void frbgen_breez_sdk_wire_fetch_lsp_info(int64_t port_, struct wire_cst_list_prim_u_8_strict *id);
void frbgen_breez_sdk_wire_fetch_reverse_swap_fees(int64_t port_,
                                                   struct wire_cst_reverse_swap_fees_request *req);
void frbgen_breez_sdk_wire_generate_diagnostic_data(int64_t port_);
void frbgen_breez_sdk_wire_in_progress_onchain_payments(int64_t port_);
void frbgen_breez_sdk_wire_in_progress_reverse_swaps(int64_t port_);
void frbgen_breez_sdk_wire_in_progress_swap(int64_t port_);