libs/sdk-flutter/lib/breez_sdk_core_bindings_generated.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Bindings for `src/breez_sdk_core.h`.
///
/// Regenerate bindings with `flutter pub run ffigen --config ffigen.yaml`.
///
class BreezSdkCoreBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  BreezSdkCoreBindings(ffi.DynamicLibrary dynamicLibrary) : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  BreezSdkCoreBindings.fromLookup(ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup)
      : _lookup = lookup;

  void store_dart_post_cobject(
    DartPostCObjectFnType ptr,
  ) {
    return _store_dart_post_cobject(
      ptr,
    );
  }

  late final _store_dart_post_cobjectPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(DartPostCObjectFnType)>>('store_dart_post_cobject');
  late final _store_dart_post_cobject =
      _store_dart_post_cobjectPtr.asFunction<void Function(DartPostCObjectFnType)>();

  void frbgen_breez_sdk_wire_backup(
    int port_,
  ) {
    return _frbgen_breez_sdk_wire_backup(
      port_,
    );
  }

  late final _frbgen_breez_sdk_wire_backupPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64)>>('frbgen_breez_sdk_wire_backup');
  late final _frbgen_breez_sdk_wire_backup =
      _frbgen_breez_sdk_wire_backupPtr.asFunction<void Function(int)>();

  void frbgen_breez_sdk_wire_backup_status(
    int port_,
  ) {
    return _frbgen_breez_sdk_wire_backup_status(
      port_,
    );
  }

  late final _frbgen_breez_sdk_wire_backup_statusPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64)>>('frbgen_breez_sdk_wire_backup_status');
  late final _frbgen_breez_sdk_wire_backup_status =
      _frbgen_breez_sdk_wire_backup_statusPtr.asFunction<void Function(int)>();

  void frbgen_breez_sdk_wire_breez_events_stream(
    int port_,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> s,
  ) {
    return _frbgen_breez_sdk_wire_breez_events_stream(
      port_,
      s,
    );
  }

  late final _frbgen_breez_sdk_wire_breez_events_streamPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_cst_list_prim_u_8_strict>)>>(
          'frbgen_breez_sdk_wire_breez_events_stream');
  late final _frbgen_breez_sdk_wire_breez_events_stream = _frbgen_breez_sdk_wire_breez_events_streamPtr
      .asFunction<void Function(int, ffi.Pointer<wire_cst_list_prim_u_8_strict>)>();

  void frbgen_breez_sdk_wire_breez_log_stream(
    int port_,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> s,
  ) {
    return _frbgen_breez_sdk_wire_breez_log_stream(
      port_,
      s,
    );
  }

  late final _frbgen_breez_sdk_wire_breez_log_streamPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_cst_list_prim_u_8_strict>)>>(
          'frbgen_breez_sdk_wire_breez_log_stream');
  late final _frbgen_breez_sdk_wire_breez_log_stream = _frbgen_breez_sdk_wire_breez_log_streamPtr
      .asFunction<void Function(int, ffi.Pointer<wire_cst_list_prim_u_8_strict>)>();

  void frbgen_breez_sdk_wire_buy_bitcoin(
    int port_,
    ffi.Pointer<wire_cst_buy_bitcoin_request> req,
  ) {
    return _frbgen_breez_sdk_wire_buy_bitcoin(
      port_,
      req,
    );
  }

  late final _frbgen_breez_sdk_wire_buy_bitcoinPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_cst_buy_bitcoin_request>)>>(
          'frbgen_breez_sdk_wire_buy_bitcoin');
  late final _frbgen_breez_sdk_wire_buy_bitcoin = _frbgen_breez_sdk_wire_buy_bitcoinPtr
      .asFunction<void Function(int, ffi.Pointer<wire_cst_buy_bitcoin_request>)>();

  void frbgen_breez_sdk_wire_check_message(
    int port_,
    ffi.Pointer<wire_cst_check_message_request> req,
  ) {
    return _frbgen_breez_sdk_wire_check_message(
      port_,
      req,
    );
  }

  late final _frbgen_breez_sdk_wire_check_messagePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_cst_check_message_request>)>>(
          'frbgen_breez_sdk_wire_check_message');
  late final _frbgen_breez_sdk_wire_check_message = _frbgen_breez_sdk_wire_check_messagePtr
      .asFunction<void Function(int, ffi.Pointer<wire_cst_check_message_request>)>();

  void frbgen_breez_sdk_wire_close_lsp_channels(
    int port_,
  ) {
    return _frbgen_breez_sdk_wire_close_lsp_channels(
      port_,
    );
  }

  late final _frbgen_breez_sdk_wire_close_lsp_channelsPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64)>>('frbgen_breez_sdk_wire_close_lsp_channels');
  late final _frbgen_breez_sdk_wire_close_lsp_channels =
      _frbgen_breez_sdk_wire_close_lsp_channelsPtr.asFunction<void Function(int)>();

  void frbgen_breez_sdk_wire_configure_node(
    int port_,
    ffi.Pointer<wire_cst_configure_node_request> req,
  ) {
    return _frbgen_breez_sdk_wire_configure_node(
      port_,
      req,
    );
  }

  late final _frbgen_breez_sdk_wire_configure_nodePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_cst_configure_node_request>)>>(
          'frbgen_breez_sdk_wire_configure_node');
  late final _frbgen_breez_sdk_wire_configure_node = _frbgen_breez_sdk_wire_configure_nodePtr
      .asFunction<void Function(int, ffi.Pointer<wire_cst_configure_node_request>)>();

  void frbgen_breez_sdk_wire_connect(
    int port_,
    ffi.Pointer<wire_cst_connect_request> req,
  ) {
    return _frbgen_breez_sdk_wire_connect(
      port_,
      req,
    );
  }

  late final _frbgen_breez_sdk_wire_connectPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_cst_connect_request>)>>(
          'frbgen_breez_sdk_wire_connect');
  late final _frbgen_breez_sdk_wire_connect = _frbgen_breez_sdk_wire_connectPtr
      .asFunction<void Function(int, ffi.Pointer<wire_cst_connect_request>)>();

  void frbgen_breez_sdk_wire_connect_lsp(
    int port_,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> lsp_id,
  ) {
    return _frbgen_breez_sdk_wire_connect_lsp(
      port_,
      lsp_id,
    );
  }

  late final _frbgen_breez_sdk_wire_connect_lspPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_cst_list_prim_u_8_strict>)>>(
          'frbgen_breez_sdk_wire_connect_lsp');
  late final _frbgen_breez_sdk_wire_connect_lsp = _frbgen_breez_sdk_wire_connect_lspPtr
      .asFunction<void Function(int, ffi.Pointer<wire_cst_list_prim_u_8_strict>)>();

  void frbgen_breez_sdk_wire_default_config(
    int port_,
    int env_type,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> api_key,
    ffi.Pointer<wire_cst_node_config> node_config,
  ) {
    return _frbgen_breez_sdk_wire_default_config(
      port_,
      env_type,
      api_key,
      node_config,
    );
  }

  late final _frbgen_breez_sdk_wire_default_configPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Int64, ffi.Int32, ffi.Pointer<wire_cst_list_prim_u_8_strict>,
              ffi.Pointer<wire_cst_node_config>)>>('frbgen_breez_sdk_wire_default_config');
  late final _frbgen_breez_sdk_wire_default_config = _frbgen_breez_sdk_wire_default_configPtr.asFunction<
      void Function(
          int, int, ffi.Pointer<wire_cst_list_prim_u_8_strict>, ffi.Pointer<wire_cst_node_config>)>();

  void frbgen_breez_sdk_wire_disconnect(
    int port_,
  ) {
    return _frbgen_breez_sdk_wire_disconnect(
      port_,
    );
  }

  late final _frbgen_breez_sdk_wire_disconnectPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64)>>('frbgen_breez_sdk_wire_disconnect');
  late final _frbgen_breez_sdk_wire_disconnect =
      _frbgen_breez_sdk_wire_disconnectPtr.asFunction<void Function(int)>();

  void frbgen_breez_sdk_wire_execute_command(
    int port_,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> command,
  ) {
    return _frbgen_breez_sdk_wire_execute_command(
      port_,
      command,
    );
  }

  late final _frbgen_breez_sdk_wire_execute_commandPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_cst_list_prim_u_8_strict>)>>(
          'frbgen_breez_sdk_wire_execute_command');
  late final _frbgen_breez_sdk_wire_execute_command = _frbgen_breez_sdk_wire_execute_commandPtr
      .asFunction<void Function(int, ffi.Pointer<wire_cst_list_prim_u_8_strict>)>();

  void frbgen_breez_sdk_wire_fetch_fiat_rates(
    int port_,
  ) {
    return _frbgen_breez_sdk_wire_fetch_fiat_rates(
      port_,
    );
  }

  late final _frbgen_breez_sdk_wire_fetch_fiat_ratesPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64)>>('frbgen_breez_sdk_wire_fetch_fiat_rates');
  late final _frbgen_breez_sdk_wire_fetch_fiat_rates =
      _frbgen_breez_sdk_wire_fetch_fiat_ratesPtr.asFunction<void Function(int)>();

  void frbgen_breez_sdk_wire_fetch_lsp_info(
    int port_,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> id,
  ) {
    return _frbgen_breez_sdk_wire_fetch_lsp_info(
      port_,
      id,
    );
  }

  late final _frbgen_breez_sdk_wire_fetch_lsp_infoPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_cst_list_prim_u_8_strict>)>>(
          'frbgen_breez_sdk_wire_fetch_lsp_info');
  late final _frbgen_breez_sdk_wire_fetch_lsp_info = _frbgen_breez_sdk_wire_fetch_lsp_infoPtr
      .asFunction<void Function(int, ffi.Pointer<wire_cst_list_prim_u_8_strict>)>();

  void frbgen_breez_sdk_wire_fetch_reverse_swap_fees(
    int port_,
    ffi.Pointer<wire_cst_reverse_swap_fees_request> req,
  ) {
    return _frbgen_breez_sdk_wire_fetch_reverse_swap_fees(
      port_,
      req,
    );
  }

  late final _frbgen_breez_sdk_wire_fetch_reverse_swap_feesPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_cst_reverse_swap_fees_request>)>>(
      'frbgen_breez_sdk_wire_fetch_reverse_swap_fees');
  late final _frbgen_breez_sdk_wire_fetch_reverse_swap_fees =
      _frbgen_breez_sdk_wire_fetch_reverse_swap_feesPtr
          .asFunction<void Function(int, ffi.Pointer<wire_cst_reverse_swap_fees_request>)>();

  void frbgen_breez_sdk_wire_generate_diagnostic_data(
    int port_,
  ) {
    return _frbgen_breez_sdk_wire_generate_diagnostic_data(
      port_,
    );
  }

  late final _frbgen_breez_sdk_wire_generate_diagnostic_dataPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64)>>(
          'frbgen_breez_sdk_wire_generate_diagnostic_data');
  late final _frbgen_breez_sdk_wire_generate_diagnostic_data =
      _frbgen_breez_sdk_wire_generate_diagnostic_dataPtr.asFunction<void Function(int)>();

  void frbgen_breez_sdk_wire_in_progress_onchain_payments(
    int port_,
  ) {
    return _frbgen_breez_sdk_wire_in_progress_onchain_payments(
      port_,
    );
  }

  late final _frbgen_breez_sdk_wire_in_progress_onchain_paymentsPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64)>>(
          'frbgen_breez_sdk_wire_in_progress_onchain_payments');
  late final _frbgen_breez_sdk_wire_in_progress_onchain_payments =
      _frbgen_breez_sdk_wire_in_progress_onchain_paymentsPtr.asFunction<void Function(int)>();

  void frbgen_breez_sdk_wire_in_progress_reverse_swaps(
    int port_,
  ) {
    return _frbgen_breez_sdk_wire_in_progress_reverse_swaps(
      port_,
    );
  }

  late final _frbgen_breez_sdk_wire_in_progress_reverse_swapsPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64)>>(
          'frbgen_breez_sdk_wire_in_progress_reverse_swaps');
  late final _frbgen_breez_sdk_wire_in_progress_reverse_swaps =
      _frbgen_breez_sdk_wire_in_progress_reverse_swapsPtr.asFunction<void Function(int)>();

  void frbgen_breez_sdk_wire_in_progress_swap(
    int port_,
  ) {
    return _frbgen_breez_sdk_wire_in_progress_swap(
      port_,
    );
  }
